frontend/test/should_fail/cast_set_array_exec.grg
using cast_model;

rule r {
	modify {
	---
		def ref arr:array<string>;
		exec ({
			arr = (array<string>)set<string>{"foobar"}
		});
	}
}
